updated viewInfo styling

--- a/prosjekt-2/src/pages/css/viewInfo.css
+++ b/prosjekt-2/src/pages/css/viewInfo.css
@@ -7,7 +7,6 @@
     
 }
 
-
 .column {
     padding: 20px;
 }
@@ -22,20 +21,25 @@
 }
 
 body{
-    background-color: bisque;
+    background-color:beige;
 }
 
 table, th, td {
-    border: 1px solid rgb(107, 107, 107);
+    /*border: 1px solid rgb(107, 107, 107);*/
     text-align: center;
     font-family: "Palatino", "URW Palladio L", serif;
     
 }
+tr:nth-child(even) {background-color:antiquewhite;}
 
+th{
+    border-bottom: 0.5pt solid black;
+}
 table{
     border-collapse: collapse;
     width: 100%;
     padding: 10px;
+    border-bottom: 0.5pt solid black;
 }
 img {
     border-radius: 4px;
@@ -45,6 +49,7 @@ img {
 
 td{
     padding: 10px;
+   
 }
 
 .column.members{
