--- a/prosjekt-2/src/index.css
+++ b/prosjekt-2/src/index.css
@@ -1,3 +1,8 @@
+* {padding: 0; margin: 0; box-sizing: border-box;}
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+main {
+  min-height: 100vh;
 }
