--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -7,7 +7,6 @@
     
 }
 
-
 .column {
     padding: 20px;
 }
@@ -21,8 +20,8 @@
     flex: 4;
 }
 
-body{
-    background-color: bisque;
+.viewInfo {
+    background-color: red;
 }
 
 table, th, td {
