--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -6,50 +6,47 @@
     grid-template-columns: repeat(3,10px);
     
 }
-
 .column {
     padding: 20px;
 }
-
 .column.members {
     /* How much of the width should it take up? a ralative factor */
     flex: 2;
+    font-family: "Palatino", "URW Palladio L", serif;
 }
-
 .column.commits {
     flex: 4;
 }
-
 .viewInfo {
-    background-color: red;
+    background-color: beige;
 }
 
+tr:nth-child(even){
+    background-color: antiquewhite;
+}
+th{
+    border-bottom: 0.5pt solid black
+}
 table, th, td {
-    border: 1px solid rgb(107, 107, 107);
+    /* border: 1px solid rgb(107, 107, 107); */
     text-align: center;
     font-family: "Palatino", "URW Palladio L", serif;
     
 }
-
 table{
     border-collapse: collapse;
     width: 100%;
     padding: 10px;
+    border-bottom: 0.5pt solid black
 }
 img {
     border-radius: 4px;
     width: 35px;
   }
 
-
 td{
     padding: 10px;
 }
-
-.column.members{
-    font-family: "Palatino", "URW Palladio L", serif;
-}
-
 p.memberliste{
     font-weight: bold;
     font-size: 25px;
@@ -59,6 +56,10 @@ p.graph{
     font-weight: bold;
     font-size: 25px;
     font-family: "Palatino", "URW Palladio L", serif;
+}
+
+form{
+    width:100%
 }
 
 /* CSS */
