--- a/prosjekt-2/src/pages/css/LoginScreen.module.css
+++ b/prosjekt-2/src/pages/css/LoginScreen.module.css
@@ -1,7 +1,3 @@
-.LoginScreen{
-  background-color: rgba(238, 128, 26, 0.795);
-  background: repeating-linear-gradient(45deg, rgba(238, 128, 26, 0.795), rgba(238, 128, 26, 0.795) 4px, rgba(238, 128, 26, 0.9) 4px, rgba(238, 128, 26, 0.795) 25px);
-}
 h2{
   color: white;
   margin-bottom: 15px;
@@ -9,7 +5,11 @@ h2{
 h3{
   margin-bottom: 15px;
 }
-input{
+.LoginScreen{
+  background-color: rgba(238, 128, 26, 0.795);
+  background: repeating-linear-gradient(45deg, rgba(238, 128, 26, 0.795), rgba(238, 128, 26, 0.795) 4px, rgba(238, 128, 26, 0.9) 4px, rgba(238, 128, 26, 0.795) 25px);
+}
+.input{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -17,10 +17,10 @@ input{
   border: 1px solid #ccc;
   box-sizing: border-box;  
 }
-label{
+.label{
   display: flex;
 }
-form{
+.form{
   width:269px;  
 }
 .container{
@@ -47,13 +47,13 @@ form{
   min-width: 300px;
   max-width: 500px;
 }
-#feedback{
+.feedback{
   font-size:16px;
   font-style: italic;
   font-weight: bold;
   display: flex;
 }
-button{
+.submit{
   text-align:center;
   all: unset;
   border-radius: 4px;
