--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -1,61 +1,75 @@
-.row {
-    display: flex;
-    padding: 20px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    grid-template-columns: repeat(3,10px);
-    
-}
-
-.column {
-    padding: 20px;
-}
-
-.column.members {
-    /* How much of the width should it take up? a ralative factor */
-    flex: 2;
-}
-
-.column.commits {
-    flex: 4;
-}
-
 .viewInfo {
-    background-color: red;
+    background-color: #ececec;
+    background: repeating-linear-gradient(45deg, #d4d3d371, #eee9e95e 4px, #d4d2d263 4px, #fafafa 25px);
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, calc(50% - 1.5rem));
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-rows: auto 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 0px;
+    width: 100%;
+    padding: 10px;
+    margin: 0 auto;
+    align-items: center;    
+}
+.info1 { grid-area: 1 / 1 / 2 / 3; } /* Title */
+.info2 { grid-area: 2 / 1 / 3 / 2; } /* Table */
+.info3 { grid-area: 2 / 2 / 3 / 3; } /* Graph */
+
+.columnMembers {
+    flex: 2;
+    padding:20px;
+}
+
+.columnCommits {
+    flex: 3;
+    padding:20px;
+    min-width: 400px;
+}
+th{
+    border-bottom: 0.5pt solid black;
+}
+tr:nth-child(even) {
+    background-color:#fc6e2752;
+    border-bottom: 1px solid;
+}
+tr:nth-child(odd) {
+    background-color:#fca32654;
+    border-bottom: 1px solid;
+}
+td:first-child{
+    background-color: #8c929d8c;
+}
+
+td{
+    padding: 10px;
 }
 
 table, th, td {
-    border: 1px solid rgb(107, 107, 107);
+    /* border: 1px solid rgb(107, 107, 107); */
     text-align: center;
     font-family: "Palatino", "URW Palladio L", serif;
-    
 }
 
 table{
     border-collapse: collapse;
     width: 100%;
     padding: 10px;
+    border-bottom: 0.5pt solid black;
 }
 img {
-    border-radius: 4px;
+    border-radius: 6.5px;
     width: 35px;
-  }
-
-
-td{
-    padding: 10px;
 }
 
-.column.members{
+.memberliste{
+    font-weight: bold;
+    font-size: 25px;
     font-family: "Palatino", "URW Palladio L", serif;
 }
 
-p.memberliste{
-    font-weight: bold;
-    font-size: 25px;
-}
-
-p.graph{
+.graph{
     font-weight: bold;
     font-size: 25px;
     font-family: "Palatino", "URW Palladio L", serif;
@@ -81,7 +95,7 @@ select {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  background-color:lightgoldenrodyellow;
+  background-color:#fc6e2752;
 }
 
 
