--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -8,24 +8,21 @@
     grid-template-rows: auto 1fr;
     grid-column-gap: 1rem;
     grid-row-gap: 0px;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 10px;
-    margin: 0 auto;
-    align-items: center;    
+    margin: 0 auto;   
 }
 .info1 { grid-area: 1 / 1 / 2 / 3; } /* Title */
 .info2 { grid-area: 2 / 1 / 3 / 2; } /* Table */
 .info3 { grid-area: 2 / 2 / 3 / 3; } /* Graph */
 
 .columnMembers {
-    flex: 2;
     padding:20px;
 }
 
 .columnCommits {
-    flex: 3;
-    padding:20px;
-    min-width: 400px;
+    min-width: 600px;
 }
 th{
     border-bottom: 0.5pt solid black;
@@ -106,5 +103,17 @@ select {
   background-color:#FCA326;
 }
 
+@media screen and (max-width:800px) {
+    .viewInfo {
+        display: flex;
+        flex-direction: column;
+        padding: 0 5px;
+        width: 100vw;
+        height: 150vh;
+    }
+    .info1,.info2,.info3{
+        width: 100%;
+    }
+}
 
 
