--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -1,32 +1,25 @@
 .viewInfo {
     background-color: #ececec;
     background: repeating-linear-gradient(45deg, #d4d3d371, #eee9e95e 4px, #d4d2d263 4px, #fafafa 25px);
-    position: relative;
     display: grid;
     grid-template-columns: repeat(2, calc(50% - 1.5rem));
-    /* grid-template-columns: repeat(2, 1fr); */
     grid-template-rows: auto 1fr;
     grid-column-gap: 1rem;
-    grid-row-gap: 0px;
     width: 100vw;
-    height: 100vh;
-    padding: 10px;
-    margin: 0 auto;   
+    height: 100%;   
 }
 .info1 { grid-area: 1 / 1 / 2 / 3; } /* Title */
 .info2 { grid-area: 2 / 1 / 3 / 2; } /* Table */
 .info3 { grid-area: 2 / 2 / 3 / 3; } /* Graph */
 
 .columnMembers {
-    padding:20px;
+    padding:0 20px;
 }
 
 .columnCommits {
-    min-width: 600px;
+    min-width: 400px;
 }
-th{
-    border-bottom: 0.5pt solid black;
-}
+
 /* #FCA326 #FC6D27 */
 /* #fc6e2752 #fca32654*/
 tr:nth-child(even) {
@@ -45,17 +38,19 @@ td{
     padding: 10px;
 }
 
-th{
-    border-bottom: 0.5pt solid black
-}
 table, th, td {
     /* border: 1px solid rgb(107, 107, 107); */
     text-align: center;
     font-family: "Palatino", "URW Palladio L", serif;
 }
+th{
+    border-bottom: 0.5pt solid black;
+    padding:8px 0;
+}
 table{
     border-collapse: collapse;
     width: 100%;
+    min-width: 400px;
     padding: 10px;
     border-bottom: 0.5pt solid black;
 }
@@ -64,7 +59,7 @@ img {
     width: 35px;
 }
 
-.memberliste{
+.memberlist{
     font-weight: bold;
     font-size: 25px;
     font-family: "Palatino", "URW Palladio L", serif;
@@ -77,7 +72,8 @@ img {
 }
 
 .form{
-    width:100%
+    width:100%;
+    min-width: 400px;    
 }
 
 /* CSS */
@@ -103,17 +99,128 @@ select {
   background-color:#FCA326;
 }
 
-@media screen and (max-width:800px) {
+/* desktop */
+@media screen and (max-width:1420px) {
     .viewInfo {
         display: flex;
         flex-direction: column;
         padding: 0 5px;
-        width: 100vw;
-        height: 150vh;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .info1,.info2,.info3{
+        width: 69%;
+        margin-top: 20px;
+    }
+    .info3{ margin-bottom: 30px;}
+}
+
+/* tablet */
+@media screen and (max-width:1281px) {
+    .viewInfo {
+        display: flex;
+        flex-direction: column;
+        padding: 0 5px;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+    }
+    .info1,.info2,.info3{
+        width: 69%;
+        margin-top: 20px;
+    }
+    .info3{ margin-bottom: 30px;}
+}
+
+/* tablet */
+@media screen and (max-width:1281px) {
+    .viewInfo {
+        display: flex;
+        flex-direction: column;
+        padding: 0 5px;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+    }
+    .info1,.info2,.info3{
+        width: 69%;
+        margin-top: 20px;
+    }
+    .info3{ margin-bottom: 30px;}
+}
+
+/* Big phones */
+@media screen and (max-width:550px) {
+    .viewInfo {
+        display: block;
+        padding: 0 5px;
+        width: 100%;
+        height: 100%;
+        margin:auto; 
+    }
+    h3{
+        font-size: 24px;
+    }
+    .info1,.info2,.info3{
+        width: 90%;
+        margin: 0 auto;
+    }
+    .info1{ 
+        padding-top: 25px;
+    }
+    .info2{ 
+        margin-top: 40px;
+    }
+    .info3{ 
+        margin-top: 60px;
+    }
+}
+
+/* standard smartphones */
+@media screen and (max-width:480px) {
+    table,.form,.columnCommits{
+        width:100%;
+        min-width:240px; 
+        font-size: 13px;
+    }
+    .columnCommits{
+        padding-bottom: 20px;
+        padding-right: 10px;
+    }
+    select{
+        margin-top:5px;
+        margin-bottom:13px;
+    }
+    h3{
+        font-size: 24px;
     }
     .info1,.info2,.info3{
         width: 100%;
     }
 }
 
+/* small smartphones */
+@media screen and (max-width:385px) {
+    table,.form,.columnCommits{
+        font-size: 11.5px;
+    }
+}
 
+/* thin smartphones */
+@media screen and (max-width:385px) {
+    table,select,label{
+        font-size: 7px;
+    }
+    h1,h3,.memberlist,.graph{
+        font-size: 20px;
+    }
+    img {
+        border-radius: 6.5px;
+        width: 14px;
+    }
+    .info3{
+        margin-top:25px
+    }
+}
