--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -6,7 +6,7 @@
     grid-template-rows: auto 1fr;
     grid-column-gap: 1rem;
     width: 100vw;
-    height: 100%;   
+    min-height: 100vh;   
 }
 .info1 { grid-area: 1 / 1 / 2 / 3; } /* Title */
 .info2 { grid-area: 2 / 1 / 3 / 2; } /* Table */
