--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -11,6 +11,7 @@
 .info1 { grid-area: 1 / 1 / 2 / 3; } /* Title */
 .info2 { grid-area: 2 / 1 / 3 / 2; } /* Table */
 .info3 { grid-area: 2 / 2 / 3 / 3; } /* Graph */
+.info4 { grid-area: 1 / 1 / 1 / 1; }
 
 .columnMembers {
     padding:0 20px;
@@ -98,6 +99,24 @@ select {
   touch-action: manipulation;
   background-color:#FCA326;
 }
+
+.buttonBack {
+    /* text-align:center; */
+    position: absolute;
+    top: 100px;
+    all: unset;
+    border-radius: 4px;
+    border: 1px solid #eee;
+    background-color: #f57b17;
+    color: white;
+    font-weight: bold;
+    margin: 6px 8px 6px;
+    padding: 8px 16px;
+    /* justify-content: center;
+    align-items: center; */
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+  }
 
 /* desktop */
 @media screen and (max-width:1420px) {
