--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -40,7 +40,7 @@ td{
 }
 
 table, th, td {
-    /* border: 1px solid rgb(107, 107, 107); */
+    border: 1px solid rgb(107, 107, 107);
     text-align: center;
     font-family: "Palatino", "URW Palladio L", serif;
 }
